---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var i : int\nvar n : nat\nvar r : real\nvar c : char\nvar b: boolean\nvar cn : char(4)\nvar s : string\nvar sn : string(4)\ntype en: enum(a, b) var ef : en\n\nget i\nget n\nget r\nget c\nget b\nget cn\nget s\nget sn\nget ef\n"
---
"i"@"src/main.t:4..5" [ConstVar(Var, No)]: int
"n"@"src/main.t:16..17" [ConstVar(Var, No)]: nat
"r"@"src/main.t:28..29" [ConstVar(Var, No)]: real
"c"@"src/main.t:41..42" [ConstVar(Var, No)]: char
"b"@"src/main.t:54..55" [ConstVar(Var, No)]: boolean
"cn"@"src/main.t:69..71" [ConstVar(Var, No)]: char_n Fixed(Unevaluated(PackageId(3072), BodyId(0)))
"s"@"src/main.t:86..87" [ConstVar(Var, No)]: string
"sn"@"src/main.t:101..103" [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(3072), BodyId(1)))
"en"@"src/main.t:121..123" [Type]: enum[DefId(PackageId(3072), LocalDefId(9))] ( "a"@SpanId(12), "b"@SpanId(13), )
"en"@"src/main.t:125..135" [Enum]: <error>
"a"@"src/main.t:130..131" [EnumVariant]: enum[DefId(PackageId(3072), LocalDefId(9))] ( "a"@SpanId(12), "b"@SpanId(13), )
"b"@"src/main.t:133..134" [EnumVariant]: enum[DefId(PackageId(3072), LocalDefId(9))] ( "a"@SpanId(12), "b"@SpanId(13), )
"ef"@"src/main.t:140..142" [ConstVar(Var, No)]: enum[DefId(PackageId(3072), LocalDefId(9))] ( "a"@SpanId(12), "b"@SpanId(13), )
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
